improve html input accessibility + fixing logos blur on mobile version

--- a/style.css
+++ b/style.css
@@ -101,17 +101,17 @@ p {
 
 .podcasting-logos_spotify {
   width: 56px;
-  margin-right: 19px;
+  margin-right: 23px;
 }
 
 .podcasting-logos_apple {
   width: 45px;
-  margin-right: 21px; 
+  margin-right: 25px;
 }
 
 .podcasting-logos_google {
   width: 73px;
-  margin-right: 11px;
+  margin-right: 16px;
 }
 
 .podcasting-logos_pocket {
